--- a/neo4j/Dockerfile
+++ b/neo4j/Dockerfile
@@ -1,13 +1,14 @@
 # Dockerfile for Neo4j with APOC plugin
 
 ARG N4J_VERSION=3.4.7
+ARG APOC_VERSION=3.4.0.2
 
 FROM neo4j:$N4J_VERSION
 
 LABEL maintainer="ibaldin@renci.org"
 
 # Fetch the APOC plugin
-ADD https://github.com/neo4j-contrib/neo4j-apoc-procedures/releases/download/3.4.0.2/apoc-3.4.0.2-all.jar /var/lib/neo4j/plugins
+ADD https://github.com/neo4j-contrib/neo4j-apoc-procedures/releases/download/$APOC_VERSION/apoc-$APOC_VERSION-all.jar /var/lib/neo4j/plugins
 
 # mangle Neo4j config to allow APOC to function
 RUN printf "# enable APOC\ndbms.security.procedures.unrestricted=apoc.*\napoc.import.file.enabled=true\n" >> /var/lib/neo4j/conf/neo4j.conf 
