update sbt to version 1.2.8, refactor installed packages

--- a/safe-server/1.0.0/Dockerfile
+++ b/safe-server/1.0.0/Dockerfile
@@ -1,25 +1,15 @@
-FROM ubuntu:bionic
+FROM openjdk:8-stretch
 MAINTAINER Michael J. Stealey <stealey@unc.edu>
 
 RUN apt-get update && apt-get -y install \
-  build-essential \
-  gdb \
-  default-jdk \
-  python \
-  git \
-  curl \
-  make \
-  htop \
-  wget \
-  libssl1.0.0 \
-  libpam0g-dev \
   libssl-dev \
+  libpam0g-dev \
   python-crypto
 
 # Install sbt
 WORKDIR /root/
-ENV SBT_VERSION 1.2.3
-RUN wget https://github.com/sbt/sbt/releases/download/v${SBT_VERSION}/sbt-${SBT_VERSION}.tgz && cd ~/ \
+ENV SBT_VERSION 1.2.8
+RUN wget https://github.com/sbt/sbt/releases/download/v${SBT_VERSION}/sbt-${SBT_VERSION}.tgz \
   && tar -zxvf sbt-${SBT_VERSION}.tgz \
   && rm -f sbt-${SBT_VERSION}.tgz
 
@@ -28,9 +18,9 @@ RUN git clone https://github.com/RENCI-NRIG/SAFE.git
 WORKDIR /root/SAFE
 
 # Compile SAFE
-RUN /root/sbt/bin/sbt "project safe-server" "compile" \
-  && cp utility/safe_keygen.sh /root/ \
-  && cp utility/hash_gen.py /root/
+RUN /root/sbt/bin/sbt "project safe-server" "compile"
+RUN cp /root/SAFE/utility/safe_keygen.sh /root/ \
+  && cp /root/SAFE/utility/hash_gen.py /root/
 
 # create safe-apps.tar.gz
 RUN cd safe-apps \
